chandeliers-lus/tests/compile_fail/ui/tc/ops/bool.stderr
error: The condition of if should be of type bool
 --> tests/compile_fail/ui/tc/ops/bool.rs:6:13
  |
6 |         b = if i then 0 else 1;
  |             ^^^^^^^^^^^^^^^^^^
  |
note: The argument is found to be of type int
 --> tests/compile_fail/ui/tc/ops/bool.rs:6:16
  |
6 |         b = if i then 0 else 1;
  |                ^

error: The argument of assert should be of type bool
  --> tests/compile_fail/ui/tc/ops/bool.rs:13:9
   |
13 |         assert i;
   |         ^^^^^^^^
   |
note: The argument is found to be of type int
  --> tests/compile_fail/ui/tc/ops/bool.rs:13:16
   |
13 |         assert i;
   |                ^
